<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView1"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/coffee2b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView1"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/toppings"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:id="@+id/linear1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cream"
            android:text="@string/cream"
            android:textColor="@color/black"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chocolate"
            android:text="@string/Chocolate"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/linear3"
        android:layout_below="@id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:layout_toRightOf="@id/email" />

        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/subject" />

        <EditText
            android:id="@+id/subject_edit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:layout_toRightOf="@id/subject" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginTop="25dp"
        android:layout_below="@id/linear3"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView2" >

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textColor="@color/white"
            android:id="@+id/minus_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/coffee_count" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:textColor="@color/white"
            android:id="@+id/plus_btn" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_text"
        android:id="@+id/order_button"
        android:layout_below="@id/linear2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/summary_text"
        android:layout_below="@id/order_button"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/order_summary"
        android:layout_below="@id/summary_text"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true" />
</RelativeLayout>